[package]
name = "rucola"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"

[dev-dependencies]
regex = "1.5"
hex = "0.4"
rand = "0.8.5"

[dependencies.num-traits]
version = "0.2"
default-features = false

[profile.release]
lto = true
